Fixed more mobile spacing issues

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -7,11 +7,7 @@
     h1 {
         font-size: 80px;
         color: #FFF;
-        //margin: 25vh 0 8px 0;
-
-        margin-bottom: 8px;
-
-        margin-top: 25vh;
+        margin: 25vh 0 0;
 
         @include mixins.small {
             margin-top: 10vh;
@@ -20,6 +16,7 @@
 
     .icon-row {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         transition: color 300ms ease-in;
 
@@ -27,6 +24,8 @@
             &:not(:first-child), &:not(:last-child) {
                 margin: 0 32px;
             }
+
+            margin-top: 8px;
         }
 
         svg {
