--- a/src/components/project/Project.scss
+++ b/src/components/project/Project.scss
@@ -33,6 +33,7 @@
 
         .languages {
             display: inline-flex;
+            flex-wrap: wrap;
 
             margin-top: 8px;
             width: 100%;
